# coder-model

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cc  readme  train.sh
data/: .main.cc.swp  CMakeLists.txt  Makefile  datalib.cc  datalib.h  gen  inspect  inspect.cc  main.cc
data/dataset/: io-pair-0.txt  metadata.txt  src-0.asm
data/gen.dSYM/Contents/Resources/DWARF/: gen
data/gen.dSYM/Contents/Resources/Relocations/aarch64/: gen.yml
data/src/common/: datalib.cc  datalib.h
data/src/inspect/: main.cc
dataset/: io-pair-0.txt  src-0.asm
src/: bitv.cc  bitv.h  entry.cc  gen.cc  prog.cc  prog.h  sim.cc  sim.h
train/: data.py  main.py  model.py  optimizer.py  ppo.py  rename.py  test.py  train.py
train/baseline/: main.py  model.py
train/ppo/: env.py  nets.py  optimizer.py
